fixed bug with cards overlapping sidebar menu

--- a/redditsort-frontend/src/Components/Card/Card.css
+++ b/redditsort-frontend/src/Components/Card/Card.css
@@ -2,8 +2,7 @@
   border-radius: 30px;
   font-size: 15px;
   background: #3E4A64;
-
-  /* position: relative; */
+  position: relative;
 }
 
 .Card--search {
